--- a/index.html
+++ b/index.html
@@ -21,18 +21,71 @@ limitations under the License.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/bootstrap.css" >
         <link rel="stylesheet" href="css/main.css" >
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" crossorigin="anonymous">
     </head>
     <body>
-        <div class="content col-sm-9">
-            <h1 id="title" class="h1">Hello, welcome to my online Chat System</h1>
-            <div class="feed">
-                
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+            <div class="container">
+                <a class="navbar-brand" href="#">
+                    Chatter
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Home
+                                <span class="sr-only">(current)</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Messages</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Discover</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Notifications</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <form class="form" id="msgform" action="server/chat.php">
-                <textarea class="form-text" id="msg" name="msg"></textarea>
-                <input type="hidden" name="username" value="123456US" />
-                <input class="btn-primary" id="sendbtn" type="submit" value="Send" />
-            </form>
+        </nav>
+        <div class="container">
+            <div class="col-md-8 col-xl-6 chat">
+                <div class="card">
+                    <div class="card-header">
+                        Chatter
+                    </div>
+                    <div class="card-body" id="msgfeed">
+                        <h5 class="card-title  text-center">Chat with user X</h5>
+                        <p class="card-text">No message right now.</p>
+                        <div class="message-block-send" >
+                            <div class="user">Them</div>
+                            <div class="message">Hello, how are you?</div>
+                            <div class="time">3 minutes ago</div>
+                        </div>
+                        <div class="message-block-receive">
+                            <div class="user">Me</div>
+                            <div class="message">Hi I'm so fine, and you?</div>
+                            <div class="time">Just now</div>
+                        </div>
+                    </div>
+                    <div class="card-footer">
+                        <form id="msgform" method="POST">
+                            <input type="hidden" name="username" value="USERX" />
+                            <div class="input-group">
+                                <textarea name="msg" class="form-control" placeholder="Type your message..." aria-label="With textarea"></textarea>
+                                <div class="input-group-append">
+                                    <input class="btn btn-primary" type="submit" value="Send">
+                                </div>
+                            </div>
+                        </form>
+
+                    </div>
+                </div>
+            </div>
         </div>
         <script type="text/javascript" src="js/jquery.min.js"></script>
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
