Worked on the Front End.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--
-Copyright 2019 Abijah.
+Copyright 2019 Abijah Kajabika.
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -60,7 +60,6 @@ limitations under the License.
                     </div>
                     <div class="card-body" id="msgfeed">
                         <h5 class="card-title  text-center">Chat with user X</h5>
-                        <p class="card-text">No message right now.</p>
                         <div class="message-block-send" >
                             <div class="user">Them</div>
                             <div class="message">Hello, how are you?</div>
