--- a/home.html
+++ b/home.html
@@ -29,27 +29,31 @@ limitations under the License.
                 <a class="navbar-brand" href="#">
                     Chatter
                 </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Home
+                                <span class="sr-only">(current)</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Messages</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Discover</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Notifications</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </nav>
         <div class="container">
-            <div class="col-6">
-                <h3 class="signin">Signin Form</h3>
-                <form class="form" id="signin">
-                    <input type="text" placeholder="Username" name="username" class="input-group-text">
-                <input type="password" placeholder="Password" name="pass" class="input-group-text">
-                <input type="submit" value="Sign In" class="btn btn-primary">
-            </form>
-            </div>
-            <div class="col-6">
-                <h3 class="h3">Signup Form</h3>
-                <form class="form" id="signup">
-                    <input type="text" placeholder="Username" name="username" class="input-group-text">
-                    <input type="text" placeholder="Full Name" name="name" class="input-group-text">
-                    <input type="password" placeholder="Password" name="pass" class="input-group-text">
-                    <input type="text" placeholder="Email or Phone Number" name="contact" class="input-group-text">
-                    <input type="submit" value="Sign Up" class="btn btn-primary">
-                </form>
-            </div>
+            
         </div>
         <script type="text/javascript" src="js/jquery.min.js"></script>
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
