Updated new features

--- a/chat.html
+++ b/chat.html
@@ -34,13 +34,13 @@ limitations under the License.
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">Home
-                                <span class="sr-only">(current)</span>
+                        <li class="nav-item">
+                            <a class="nav-link" href="home.html">Home
                             </a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Messages</a>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="chat.html">Messages</a>
+                            <span class="sr-only">(current)</span>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Discover</a>
@@ -53,6 +53,12 @@ limitations under the License.
             </div>
         </nav>
         <div class="container">
+            <div class="col-xl-6">
+                <input type="text">
+                <ul class="list list-group" id="chats">
+                    
+                </ul>
+            </div>
             <div class="col-md-8 col-xl-6 chat">
                 <div class="card">
                     <div class="card-header">
@@ -88,6 +94,6 @@ limitations under the License.
         </div>
         <script type="text/javascript" src="js/jquery.min.js"></script>
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
-        <script type="text/javascript" src="js/main.js"></script>
+        <script type="text/javascript" src="js/chat.js"></script>
     </body>
 </html>
