--- a/home.html
+++ b/home.html
@@ -40,7 +40,7 @@ limitations under the License.
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Messages</a>
+                            <a class="nav-link" href="chat.html">Messages</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Discover</a>
@@ -53,7 +53,13 @@ limitations under the License.
             </div>
         </nav>
         <div class="container">
-            
+            <div id="poster">
+                <form class="form">
+                    <input type="text" name="description">
+                    <input type="file" name="image">
+                    <input type="submit" value="Post">
+                </form>
+            </div>
         </div>
         <script type="text/javascript" src="js/jquery.min.js"></script>
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
