--- a/index.html
+++ b/index.html
@@ -32,22 +32,22 @@ limitations under the License.
             </div>
         </nav>
         <div class="container">
-            <div class="col-6">
-                <h3 class="signin">Signin Form</h3>
+            <div class="col-lg-6 text-center border border-light p-5">
+                <h3 class="h3 mb-4">Signin Form</h3>
                 <form class="form" id="signin">
-                    <input type="text" placeholder="Username" name="username" class="input-group-text">
-                <input type="password" placeholder="Password" name="pass" class="input-group-text">
-                <input type="submit" value="Sign In" class="btn btn-primary">
-            </form>
+                    <input type="text" placeholder="Username" name="username" class="form-control mb-4">
+                    <input type="password" placeholder="Password" name="pass" class="form-control mb-4">
+                    <input type="submit" value="Sign In" class="btn btn-info btn-block my-4">
+                </form>
             </div>
-            <div class="col-6">
+            <div class="col-lg-6 text-center border border-light p-5">
                 <h3 class="h3">Signup Form</h3>
                 <form class="form" id="signup">
-                    <input type="text" placeholder="Username" name="username" class="input-group-text">
-                    <input type="text" placeholder="Full Name" name="name" class="input-group-text">
-                    <input type="password" placeholder="Password" name="pass" class="input-group-text">
-                    <input type="text" placeholder="Email or Phone Number" name="contact" class="input-group-text">
-                    <input type="submit" value="Sign Up" class="btn btn-primary">
+                    <input type="text" placeholder="Username" name="username" class="form-control mb-4">
+                    <input type="text" placeholder="Full Name" name="name" class="form-control mb-4">
+                    <input type="password" placeholder="Password" name="pass" class="form-control mb-4">
+                    <input type="text" placeholder="Email or Phone Number" name="contact" class="form-control mb-4">
+                    <input type="submit" value="Sign Up" class="btn btn-info btn-block my-4">
                 </form>
             </div>
         </div>
